# PlayBot

./: CMakeLists.txt  README.md  main.cpp
Star-Conflict/: main.cpp
albion-online/: main.cpp
common/: ScreenShot.h  StaticDetector.h  WalkDetector.h
star-conflict/: main.cpp
